--- a/package.json
+++ b/package.json
@@ -66,15 +66,21 @@
     "camelcase": "^6.0.0",
     "chalk": "^4.0.0",
     "enquirer": "^2.3.4",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^3.4.0",
     "eslint-config-react-app": "^5.2.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-jsx": "^10.0.0",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "execa": "^4.0.3",
     "fs-extra": "^9.0.0",
     "jest": "^25.3.0",
@@ -83,7 +89,7 @@
     "lodash.merge": "^4.6.2",
     "ora": "^4.0.3",
     "pascal-case": "^3.1.1",
-    "prettier": "^1.19.1",
+    "prettier": "^2.3.2",
     "progress-estimator": "^0.2.2",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^1.32.1",
@@ -125,6 +131,12 @@
     "tiny-warning": "^1.0.3",
     "yarn-deduplicate": "^2.1.1"
   },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.28.2",
+    "**/@typescript-eslint/parser": "^4.28.2",
+    "eslint": "7.30.0",
+    "prettier": "^2.3.2"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged --pattern '!test/tests/lint/**' && yarn lint && yarn deduplicate:check && doctoc README.md"
@@ -132,8 +144,8 @@
   },
   "prettier": {
     "printWidth": 80,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "none"
   }
 }
