--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/eslint-parser": "^7.14.7",
     "@babel/helper-module-imports": "^7.0.0",
     "@babel/parser": "^7.11.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -54,10 +55,9 @@
     "@rollup/plugin-replace": "^2.2.1",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@typescript-eslint/parser": "^4.28.2",
     "ansi-escapes": "^4.2.1",
     "asyncro": "^3.0.0",
-    "babel-eslint": "^10.0.3",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-macros": "^2.6.1",
@@ -103,7 +103,7 @@
     "tiny-glob": "^0.2.6",
     "ts-jest": "^25.3.1",
     "tslib": "^1.9.3",
-    "typescript": "^3.7.3"
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.2",
@@ -135,9 +135,7 @@
   },
   "resolutions": {
     "**/@typescript-eslint/eslint-plugin": "^4.28.2",
-    "**/@typescript-eslint/parser": "^4.28.2",
-    "eslint": "7.30.0",
-    "prettier": "^2.3.2"
+    "**/@typescript-eslint/parser": "^4.28.2"
   },
   "husky": {
     "hooks": {
