--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-jsx": "^10.0.0",
+    "eslint-plugin-flowtype": "^5.8.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -103,7 +104,7 @@
     "tiny-glob": "^0.2.6",
     "ts-jest": "^27.0.3",
     "tslib": "^1.9.3",
-    "typescript": "^4.3.5"
+    "typescript": "3.9.9"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.2",
