--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "babel-plugin-replace-identifiers": "^0.1.1",
     "cssnano": "^4.1.10",
     "doctoc": "^1.4.0",
+    "eslint-plugin-typescript-sort-keys": "^1.7.0",
     "husky": "^4.2.2",
     "np": "^6.4.0",
     "pretty-quick": "^2.0.0",
