--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepare": "tsc -p tsconfig.json",
     "build": "tsc -p tsconfig.json",
     "lint": "yarn build && yarn lint:post-build",
-    "lint:post-build": "node dist/index.js lint ./ --ignore-pattern 'test/e2e/fixtures/lint'",
+    "lint:post-build": "node dist/index.js lint $(git diff --name-only HEAD | grep -E \".js$|.ts$|.jsx$|.tsx$\" | xargs)",
     "test": "yarn build && yarn test:post-build",
     "test:post-build": "node dist/index.js test",
     "start": "tsc -p tsconfig.json --watch",
